k8s/test-cluster/test-1/hashi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hashi
  name: hashi-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hashi
status:
  loadBalancer: {}
