k8s/test-cluster/test-1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx3-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-api
  type: ClusterIP
status:
  loadBalancer: {}
